# metal

./: .gitignore  CMakeLists.txt  README.md  appdmg.json  build_release.sh  create_xcode_project_macos.sh  metal.cmake
.github/workflows/: ci.yml
src/: AppDelegate.cpp  AppDelegate.h  MTKViewDelegate.cpp  MTKViewDelegate.h  MyAppDelegate.cpp  MyAppDelegate.h  MyMTKViewDelegate.cpp  MyMTKViewDelegate.h  Renderer.cpp  Renderer.h  Shaders.metal  main.cpp
src/macos/: main.cpp
